--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerVersion '1.5.30'
     }
     packagingOptions {
         resources {
