--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     // Koin
     implementation("io.insert-koin:koin-android:3.2.0")
     implementation("io.insert-koin:koin-androidx-compose:3.2.0")
+    androidTestImplementation("org.koin:koin-test:2.0.0")
+    testImplementation("io.insert-koin:koin-test:3.2.0")
+    testImplementation("io.insert-koin:koin-test-junit4:3.2.0")
 
     // Retrofit
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
